0.08 Thu Aug 18 13:49:47 EDT 2005

* Internal updates for more robustness on 1.30

0.07 Wed Aug 17 13:28:35 EDT 2005

* Updates to work correctly with Mason 1.30

0.06 Mon Jul 25 18:49:23 EDT 2005

* Doc fixes

0.05 Mon May  2 22:12:15 EDT 2005

* Added support for redirects. (Also, added a Hook::LexWrap dependency)