@@ -1,3 +1,8 @@
+* Create handler_class and setup_escapes hooks in new_handler, so that
+  subclasses don't need to copy-and-paste new_handler
+ 
+* Default content type should be "text/html", not "text/htm"
+
 0.08 Thu Aug 18 13:49:47 EDT 2005
 
 * Internal updates for more robustness on 1.30
